Giriş ekranı tekrar düzenlendi

--- a/Planner/giris-ekrani/giris.html
+++ b/Planner/giris-ekrani/giris.html
@@ -20,13 +20,14 @@
 <body>
     <!-- İlk Görünen Karşılama Ekranı -->
     <div class="welcoming-paragraph">
-        <p class="merhaba animate__animated animate__fadeInDown">Merhaba</p>
-        <p id="motivasyonSozu" class="animate__animated animate__fadeIn"></p>
-        <div class="buttons">
-            <button class="kayit animate__animated animate__slideInLeft" onclick="kayitOlBackgroundPopUp() , kayitOlPopUp()">Kayıt Ol</button>
-            <button class="giris animate__animated animate__slideInRight" onclick="kayitOlBackgroundPopUp() , girisYapPopUp()">Giriş Yap</button>
+        <div class="top-part animate__animated animate__fadeInDown">
+            <p class="merhaba animate__animated animate__fadeInDown">Merhaba</p>
+            <p id="motivasyonSozu" class="animate__animated animate__fadeIn"></p>
         </div>
-    </div>
+                <div class="buttons">
+                    <button class="kayit animate__animated animate__slideInLeft" onclick="kayitOlBackgroundPopUp() , kayitOlPopUp()">Kayıt Ol</button>
+                    <button class="giris animate__animated animate__slideInRight" onclick="kayitOlBackgroundPopUp() , girisYapPopUp()">Giriş Yap</button>
+                </div>
     <!-- Kayıt ve Giriş Ekranı Genel Kutusu-->
     <div class="register-login-screen animate__animated animate__fadeIn" id="kayit-ol-background-formu">
         <!-- Kayıt Ekranı -->
