--- a/Planner/ana-ekran/ana-ekran.html
+++ b/Planner/ana-ekran/ana-ekran.html
@@ -4,9 +4,112 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Merhaba</title>
+    <link rel="stylesheet" href="ana-ekran.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;900&family=Montserrat:ital,wght@0,100;0,400;0,500;0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+  <!-- Karşılama Ekranı -->
+    <div class="ana-sayfa-heading-box">
+      <div class="heading-box">
+        <h1> Hosgeldin </h1>
+      </div>
+      <div class="username-box">
+        <h3> Kullanıcı adi</h3>
+      </div>
+
+    </div>
+
+  <!-- Takvim -->
+  <div class="calendar-heading-background">
+    <div class="heading-box">
+      <h3> Takvim </h3>
+
+    </div>
+    <div class="calendar-background">
+      <div class="dummy-box">
+
+      </div>
+        <div class="container">
+            <div class="left">
+              <div class="calendar">
+                <div class="month">
+                  <i class="fas fa-angle-left prev"></i>
+                  <div class="date">aralik 2015</div>
+                  <i class="fas fa-angle-right next"></i>
+                </div>
+                <div class="weekdays">
+                  <div>Pzr</div>
+                  <div>Pzt</div>
+                  <div>Sal</div>
+                  <div>Çar</div>
+                  <div>Per</div>
+                  <div>Cum</div>
+                  <div>Cmt</div>
+                </div>
+                <div class="days"></div>
+                <div class="goto-today">
+                  <div class="goto">
+                    <input type="text" placeholder="mm/yyyy" class="date-input" />
+                    <button class="goto-btn">Git</button>
+                  </div>
+                  <button class="today-btn">Bugün</button>
+                </div>
+              </div>
+            </div>
+            <div class="right">
+              <div class="today-date">
+                <div class="event-day">Per</div>
+                <div class="event-date">12 aralik 2022</div>
+              </div>
+              <div class="events"></div>
+              <div class="add-event-wrapper">
+                <div class="add-event-header">
+                  <div class="title">Ekle</div>
+                  <i class="fas fa-times close"></i>
+                </div>
+                <div class="add-event-body">
+                  <div class="add-event-input">
+                    <input type="text" placeholder="Etkinlik İsmi" class="event-name" />
+                  </div>
+                  <div class="add-event-input">
+                    <input
+                      type="text"
+                      placeholder="Etkinlik Zamanı"
+                      class="event-time-from"
+                    />
+                  </div>
+                  <div class="add-event-input">
+                    <input
+                      type="text"
+                      placeholder="Etkinlik Zamanı"
+                      class="event-time-to"
+                    />
+                  </div>
+                </div>
+                <div class="add-event-footer">
+                  <button class="add-event-btn">Ekle</button>
+                </div>
+              </div>
+            </div>
+            <button class="add-event">
+              <i class="fas fa-plus"></i>
+            </button>
+          </div>
+    </div>
+
+    <!-- Ders Programı -->
+
+
+
+
+
+
+
+
+  </div>
+    <script src="ana-ekran.js"></script>
 </body>
 </html>
