calışma ekranına pomodoro timerı yapılacaklar listesi eklendi

--- a/Planner/ana-ekran/ana-ekran.html
+++ b/Planner/ana-ekran/ana-ekran.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="css/takvim.css">
     <link rel="stylesheet" href="css/hedeflerim.css">
     <link rel="stylesheet" href="css/ders-programi.css">
+    <link rel="stylesheet" href="css/work-button.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;900&family=Montserrat:ital,wght@0,100;0,400;0,500;0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="body-background">
   <!-- Karşılama Ekranı -->
     <div class="ana-sayfa-heading-box">
       <div class="heading-box">
@@ -285,34 +287,21 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!--  -->
 
 
 
   <!-- Diğer Sayfa İçin Button -->
 
+    <div class="work-button-outside-box">
+        <div class="work-button-box">
+            <button> Çalışma Ekranı </button>
+        </div>
+
+    </div>
+
   <!-- -->
+</div>
     <script src="javascript/ana-ekran.js"></script>
     <script src="javascript/ders-programi.js"></script>
     <script src="javascript/hedeflerim.js"></script>
