--- a/Planner/giris-ekrani/giris.html
+++ b/Planner/giris-ekrani/giris.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="register-button">
-                <button onclick="">Kayıt Ol</button>
+                <button >Kayıt Ol</button>
             </div>
         </div>
         <!-- Giriş Ekranı -->
