Sayfalar arasında gezmek için butonlar eklendi

--- a/Planner/ana-ekran/ana-ekran.html
+++ b/Planner/ana-ekran/ana-ekran.html
@@ -295,14 +295,14 @@
 
     <div class="work-button-outside-box">
         <div class="work-button-box">
-            <button> Çalışma Ekranı </button>
+            <button onclick="calismaEkraniGit()"> Çalışma Ekranı </button>
         </div>
 
     </div>
 
   <!-- -->
 </div>
-    <script src="javascript/ana-ekran.js"></script>
+    <script src="ana-ekran.js"></script>
     <script src="javascript/ders-programi.js"></script>
     <script src="javascript/hedeflerim.js"></script>
 </body>
