--- a/Planner/giris-ekrani/giris.html
+++ b/Planner/giris-ekrani/giris.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="register-button">
-                <button >Kayıt Ol</button>
+                <button onclick="anaSayfaGit()"> Kayıt Ol </button>
             </div>
         </div>
         <!-- Giriş Ekranı -->
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="login-button">
-                <button onclick="">Giris Yap</button>
+                <button onclick="anaSayfaGit()">Giris Yap</button>
 
             </div>
         </div>
